# LLMExtractor

./: .gitignore  APPENDIX.md  CANONICAL_OVERVIEW.md  FILE_INDEX.md  GAPS_AND_TODOS.md  IMPLEMENTATION_REALITY_MAP.md  INFERRED_ENHANCEMENTS.md  MODULE_DEEP_DIVES.md  README.md  RULES_AND_INVARIANTS.md  debug_db.py  phase3_audit_trace.jsonl  pyproject.toml  syncarch.txt  synccoginitivearch.txt  test_db_operations.py  test_nexus_p1.db
Architecture/Backend/: GAPS_AND_TODOS.md
Architecture/UI/: APPENDIX.md  CANONICAL_OVERVIEW.md  FILE_INDEX.md  GAPS_AND_TODOS.md  IMPLEMENTATION_REALITY_MAP.md  INFERRED_ENHANCEMENTS.md  MODULE_DEEP_DIVES.md  RULES_AND_INVARIANTS.md
Disc/: uiphase2.txt
NEXUS_COGNITIVE_PLAN_v1/: 01_CANONICAL_OVERVIEW.md  02_FILE_INDEX.md  03_RULES_AND_INVARIANTS.md  04_IMPLEMENTATION_REALITY_MAP.md  05_MODULE_DEEP_DIVES.md  06_GAPS_AND_TODOS.md  07_INFERRED_ENHANCEMENTS.md  08_APPENDIX.md  EXECUTION_LOG_TEMPLATE.md  README.md
archive/: README.md
history_archive/: nexus_architecture.md
scripts/: build_index.py  export_conversations.py  extract_prompts.py  merge_to_walls.py  migrate_to_intents.py  seed_prompts.py  test_api_trace.py  test_ask_preview.py  test_assemble_topic.py  test_full_loop.py  visualize_walls.py
scripts/maintenance/: prune_bricks.py  rebuild_unified_graph.py  rebuild_vector_index.py
scripts/utilities/: ArchitectureFlow.md  chart.py  (+7 more)
tests/: new_feature_tests.py  test_p0_fixes.py  test_p1_observability.py  test_reranker.py  test_rewrite_integration.py  test_server_graph.py
ui/: app.js  index.html  index.json  styles.css
(+79 files in other folders)
