[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "0.1.0"
description = "Nexus Productivity Backbone"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "faiss-cpu",
    "numpy",
    "flask",
    "sentence-transformers",
    "tiktoken",
    "unstructured"
]

[project.scripts]
nexus = "nexus.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
